<resources>
    <string name="app_name">BlueyMoney</string>
    <string name="bluey_money">Bluey Money</string>
    <string name="maneja_tus_finanzas_preciosa">Maneja tus finanzas bonita</string>
    <string name="usuario">Usuario</string>
    <string name="entrar">Ingresar</string>
    <string name="gastos">Gastos</string>
    <string name="diarios">Diarios</string>
    <string name="por_mes">Por Mes</string>
    <string name="por_a_o">Por Año</string>
    <string name="comidas">Comidas</string>
    <string name="_0_00">$0.00</string>
    <string name="DAY">07</string>
    <string name="monto_ej_500_00">Monto (ej. 500.00)</string>
    <string name="nombre_del_cono_ej_ic_comida">Nombre del ícono (ej. ic_comida)</string>
    <string name="nombre_del_gasto">Nombre del gasto</string>
    <string name="icon">icon</string>
    <string name="seleccionar_cono">Seleccionar ícono</string>
    <string name="total_recibido">Total de Ingresos</string>
    <string name="_10_000_00">$4,000.00</string>
    <string name="total_de_gastos">Total de Gastos</string>
    <string name="nombre_del_ingreso">Nombre del Ingreso</string>
    <string name="saldo_total">Saldo Total</string>
    <string name="gastos_e_ingresos">Gastos e Ingresos</string>
    <string name="gestor">Gestor</string>
    <string name="listas">Lista del Super</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="selecciona_la_fecha">Selecciona la fecha</string>
    <string name="gr_fica">Gráfica</string>
    <string name="ingresos">Ingresos</string>
    <string name="gastos_title">Gastos</string>
    <string name="_4_870_00">$4,870.00</string>
    <string name="sueldo_total">Sueldo Total</string>
    <string name="agregar_un_nuevo_elemento">Agregar un nuevo elemento</string>
    <string name="agregar">Agregar a la Lista</string>
    <string name="precio_del_producto">Precio del producto</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="finanzas">Bluey Money</string>
    <string name="lista_del_super">🛒 Lista del Super</string>
    <string name="balance">Balance</string>
    <string name="ingresa_tu_usuario">Ingresa tu usuario:</string>
    <string name="pista_de_contrase_a_jim">Pista de Contraseña: Jim</string>
    <string name="grafica_general">💲Grafica General</string>
    <string name="movimientos">💵 Movimientos</string>
    <string name="grafica">Gráfica</string>
</resources>