<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="50dp"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:background="@drawable/background_et_add"
        android:id="@+id/etNombreIngreso"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:textSize="15sp"
        android:inputType="text"
        android:fontFamily="@font/carter"
        android:layout_marginBottom="10dp"
        android:hint="@string/nombre_del_ingreso" />

    <EditText
        android:background="@drawable/background_et_add"
        android:id="@+id/etMontoIngreso"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints=""
        android:padding="8dp"
        android:textSize="15sp"
        android:fontFamily="@font/carter"
        android:inputType="numberDecimal"
        android:layout_marginBottom="10dp"
        android:hint="@string/monto_ej_500_00" />

    <EditText
        android:autofillHints=""
        android:textSize="15sp"
        android:fontFamily="@font/carter"
        android:background="@drawable/background_et_add"
        android:id="@+id/etFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/selecciona_la_fecha"
        android:focusable="false"
        android:inputType="none"
        android:layout_marginBottom="20dp"
        android:drawableEnd="@drawable/ic_calendar"
        android:padding="8dp">
    </EditText>


    <Button
        android:id="@+id/btnSeleccionarIcono"
        android:layout_width="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:backgroundTint="@color/btn_color"
        android:layout_height="wrap_content"
        android:text="@string/seleccionar_cono" />

</LinearLayout>
