<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.GraphicFragment">


    <androidx.cardview.widget.CardView
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_gravity="center"
        android:id="@+id/titleGraphic"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grafica_general"
            android:fontFamily="@font/carter"
            android:textSize="26sp"
            android:layout_gravity="center"
            android:gravity="center">
        </TextView>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/etiquetas"
        android:layout_width="match_parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/titleGraphic"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGastos"
            android:layout_width="0dp"
            android:layout_marginStart="40dp"
            android:fontFamily="@font/inter"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/gastos"
            android:textColor="@color/white"
            android:background="@drawable/title_graphic_left"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnIngresos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="40dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/inter"
            android:text="@string/ingresos"
            android:textColor="@color/black"
            android:background="@drawable/title_graphic_right"
            android:textAllCaps="false" />

    </LinearLayout>





   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:gravity="center"
       android:layout_marginTop="40dp"
       app:layout_constraintTop_toBottomOf="@id/etiquetas">
       <TextView
           android:id="@+id/sueldoTotal"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/_4_870_00"
           android:textStyle="bold"
           android:fontFamily="@font/inter"
           android:textSize="27sp">
       </TextView>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sueldo_total"
           android:gravity="center"
           android:fontFamily="@font/inter"
           android:textSize="27sp">
       </TextView>



       <com.github.mikephil.charting.charts.PieChart
           android:id="@+id/chart"
           android:layout_marginTop="30dp"
           android:layout_width="match_parent"
           android:layout_height="350dp"
           android:layout_gravity="center">
       </com.github.mikephil.charting.charts.PieChart>



   </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>