<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/accent_color"
    android:paddingTop="60dp"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!-- HEADER AZUL -->
    <LinearLayout
        android:layout_marginBottom="10dp"
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/accent_color">

        <TextView
            android:id="@+id/tvGastos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finanzas"
            android:layout_marginStart="30dp"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="@font/inter"
            android:layout_marginEnd="12dp" />

        <ImageView
            android:layout_marginStart="5dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_bluey2"
            android:contentDescription="@null">
        </ImageView>
        <View
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <ImageButton
            android:contentDescription="@null"
            android:id="@+id/btnUploadData"
            android:layout_marginEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_cloud" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewSelector"
        android:layout_width="match_parent"
        android:layout_below="@id/header"
        android:orientation="horizontal"
        android:layout_height="wrap_content">


        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorAnimationMode="elastic"
            app:tabIndicatorAnimationDuration="@integer/material_motion_duration_long_2"
            app:tabIndicatorColor="@color/black"
            app:tabSelectedTextColor="@color/black"
            app:tabSelectedTextAppearance="@color/black"
            android:background="@color/accent_color">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gestor">
            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grafica">
            </com.google.android.material.tabs.TabItem>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/listas">
            </com.google.android.material.tabs.TabItem>

        </com.google.android.material.tabs.TabLayout>


    </LinearLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager2"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/viewSelector">

    </androidx.viewpager2.widget.ViewPager2>


</RelativeLayout>
