<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BalanceFragment">



    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/titleMovements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/title_background"
        app:cardCornerRadius="32dp">

        <TextView
            android:layout_width="match_parent"
            android:text="@string/movimientos_generales"
            android:gravity="center"
            android:textStyle="bold"
            android:fontFamily="@font/inter"
            android:textSize="24sp"
            android:layout_height="60dp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/saldoTotal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:gravity="center"
        android:layout_below="@id/titleMovements"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            android:layout_gravity="center"
            android:textSize="24sp"
            android:textStyle="italic"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter"/>


        <TextView
            android:layout_marginStart="10dp"
            android:id="@+id/saldoTotal_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/_10_000_00"
            android:textSize="24sp"
            android:textStyle="italic" />

    </LinearLayout>


    <!-- FECHA Y AHORRO -->
    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:id="@+id/dateRow"
        android:layout_below="@id/saldoTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="@color/title_background"
        android:gravity="center_vertical">






    </LinearLayout>



    <LinearLayout
        android:id="@+id/totalIngresosLayout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/saldoTotal"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:backgroundTint="@color/total_bars">

        <TextView
            android:id="@+id/etiquetaTotalIngreso"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/total_recibido"
            android:textColor="@color/blue_text"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter"/>


        <TextView
            android:id="@+id/ingresoTotal_Tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_000_00"
            android:textColor="@color/blue_text"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"/>

    </LinearLayout>

    <!-- LISTA DE MOVIMIENTOS -->
    <ScrollView
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/scrollView"
        android:layout_below="@id/totalIngresosLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutMovimientos"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Aquí se pueden inflar dinámicamente los gastos -->

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/totalGastoslayout"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/black"
        android:orientation="horizontal"
        android:backgroundTint="@color/total_bars">

        <TextView
            android:id="@+id/totalGastos"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/total_de_gastos"
            android:textColor="@color/blue_text"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter"/>


        <TextView
            android:id="@+id/gastoTotal_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10_000_00"
            android:textColor="@color/blue_text"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/inter"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/totalGastoslayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layoutGastos"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Aquí se pueden inflar dinámicamente los gastos -->

        </LinearLayout>
    </ScrollView>

    <!-- BOTÓN FLOTANTE -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAgregar"
        android:contentDescription="@null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/accent_color"
        android:src="@drawable/ic_agregar" />

</RelativeLayout>